@@ -19,7 +19,7 @@ repositories {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(11))
+        languageVersion.set(JavaLanguageVersion.of(17))
     }
 }
 
@@ -50,6 +50,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
+
+    jvmArgs([
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    ])
 }
 
 jacocoTestReport {
